--- a/index.html
+++ b/index.html
@@ -27,37 +27,42 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>動機</h3>
 
-<p><strong>　前回までのあらすじ</strong></p>
+<p><strong>これまでのお話</strong></p>
 
-<p>　寝露とはぐれた破闘羅主は、京の町をさまよっていた。<br>
-　あのとき、うまく盲導犬のふりさえしていれば…<br>
-　寝露があんなに元気よく周りを見渡していなければ、ひとり、もとい一匹だけ市バスから放り出される事はなかった。<br>
-　言うまい。  </p>
+<p>寝露（ネロ）とはぐれた破闘羅主は、京の町をさまよっていた。<br>
+あのとき、うまく盲導犬のふりさえしていれば…寝露があんなに元気よく周りを見渡していなければ、ひとり、もとい一匹だけ市バスから放り出される事はなかった。<br>
+言うまい。</p>
 
-<p>　今は一刻も早く、はぐれて、ひとり不安になっている寝露を探し出してやらなければならない。京都フリークのご主人様と一緒にまわった名所旧跡が、頭の中でひらめいては泡のように消えていく。<br>
-　東寺は市でにぎやかだった、清水の舞台はまじ高かった。羅城門跡にはかなり肩すかしをくわされたものだ。<br>
-　何にせよ、思い出の場所のどこかに寝露がいるはず。  </p>
+<p>今は一刻も早く、はぐれて、ひとり不安になっている寝露を探し出してやらなければならない。<br>
+京都フリークのご主人様と一緒にまわった名所旧跡が、頭の中でひらめいては泡のように消えていく。<br></p>
 
-<p>　「破闘羅主、なんだかとっても眠いんだ」  </p>
+<img src="images/help2.png">
 
-<p>　寝るなぁああ、寝露ぉおおお。仁王像をみながら言うセリフじゃあないいいい。<br>
-　今、そっちに行くうう。  </p>
+<p><h3>主人とはぐれた犬が、主人を捜して京都をまわる</h3></p>
 
-<p>　かすかな記憶は地図にきらめきとなって現れる。そこにいけば、別の場所も思い出せるはず。走れ破闘羅主。友のため。<br>
-　って最後メロス。</p>
+<p>東寺は市でにぎやかだった、清水の舞台はまじ高かった。羅城門跡にはかなり肩すかしをくわされたものだ。<br>
+何にせよ、思い出の場所のどこかに寝露がいるはず。</p>
+
+<p>「破闘羅主、なんだかとっても眠いんだ」</p>
+
+<p>寝るなぁああ、寝露ぉおおお。仁王像をみながら言うセリフじゃあないいいい。<br>
+今、そっちに行くうう。</p>
+
+<p>かすかな記憶は地図にきらめきとなって現れる。そこにいけば、別の場所も思い出せるはず。走れ破闘羅主。友のため。<br>
+って最後メロス。</p>
+
+<img src="images/help1.png">
+
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>© 2013 テン＊シー＊シー</p>
       </footer>
     </div>
-
-    
 
   </body>
 </html>
