アプリの説明を追加

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
+<p><strong>アプリの説明</strong></p>
+<p>京都観光マップです。<br>
+修学旅行前や旅行に京都の有名スポット情報をゲットしましょう。<br>
+<br>
+でも、最初は全部隠しています。<br>
+地図に埋もれたスポット情報を掘り出してください。<br>
+見つけたスポットにはキーワードが付いてきて、関係するスポットが見つかるようになっています。<br>
+<br>
+北野天満宮、八坂神社、東寺、…、定番のスポットから、なんでこんなのがってものまで80以上のスポットが埋まっています。<br>
+つまらないスポットを掘り出したからって、京チカの事を嫌いになっても、京都の事は嫌いにならないでください。</p>
+
 <p><strong>これまでのお話</strong></p>
 
 <p>寝露（ネロ）とはぐれた破闘羅主は、京の町をさまよっていた。<br>
